@@ -1,4 +1,5 @@
 usr/bin
 usr/lib/ubiquity/base-installer
+usr/lib/ubiquity/clock-setup
 usr/lib/python2.4/site-packages/ubiquity/frontend
 usr/share/applications/
