@@ -1,0 +1,6 @@
+#! /bin/sh -e
+
+. /usr/share/debconf/confmodule
+
+/usr/lib/ubiquity/clock-setup/clock-setup
+/usr/lib/ubiquity/clock-setup/prebaseconfig
